--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -945,8 +945,8 @@ textarea::placeholder{
     .menu-opener{
         display: block;
         width: 45px;
-        height: 30px;
-        margin-right: 20px;
+        margin-right: 30px;
+        cursor: pointer;;
     }
     nav{
         display: none;
